# example-qt-translations

./: CMakeLists.txt  LICENSE  README.md  resources.qrc.in
lang/: lang_de.ts
src/: main.cpp
